
***  Support $test$plusargs and $value$plusargs, but see the docs!

***  Add VARHIDDEN warning when signal name hides module name.

**** Fix MinGW compilation, bug184. [by Shankar Giri]

**** Support optional cell parenthesis, bug179. [by Byron Bradley]

**** Support for loop i++, ++i, i--, --i, bug175. [by Byron Bradley]

**** Fix Verilator core dump on wide integer divides, bug178. [Byron Bradley]

* Verilator 3.720 2009/10/26

**   Support little endian bit vectors ("reg [0:2] x;").

**   Support division and modulus of > 64 bit vectors.  [Gary Thomas]

***  Fix writing to out-of-bounds arrays writing element 0.

**** Fix core dump with SystemVerilog var declarations under unnamed begins.

**** Fix VCD files showing internal flattened hierarchy, broke in 3.714.

**** Fix cell port connection to unsized integer causing false width warning.

**** Fix erroring on strings with backslashed newlines, bug168. [Pete Nixon]

* Verilator 3.714 2009/09/18

**   Add --bbox-sys option to blackbox $system calls.

**   Support generate for var++, var--, ++var, --var.

***  Improved warning when "do" used as identifier.

**** Don't require SYSTEMPERL_INCLUDE if SYSTEMPERL/src exists. [Gary Thomas]

**** Fix deep defines causing flex scanner overflows. [Brad Dobbie]

**** Fix preprocessing commas in deep parameterized macros. [Brad Dobbie]

**** Fix tracing escaped dotted identifiers, bug107.

**** Fix $display with uppercase %M.

**** Fix --error-limit option being ignored.

* Verilator 3.713 2009/08/04

**   Support constant function calls for parameters. [many!]

***  Support SystemVerilog "logic", bug101.  [by Alex Duller]

***  Name SYMRSVDWORD error, and allow disabling it, bug103. [Gary Thomas]

**** Fix escaped preprocessor identifiers, bug106. [Nimrod Gileadi]

* Verilator 3.712 2009/07/14

**   Patching SystemC is no longer required to trace sc_bvs.

***  Support zero-width constants in concatenations.  [Jeff Winston]
