@@ -462,6 +462,7 @@ string V3PreProcImp::defineSubst(V3DefineRef* refp) {
 	    //cout << "CH "<<*cp<<"  an "<<argName<<"\n";
 	    if (!quote) {
 		if ( isalpha(*cp) || *cp=='_'
+		     || *cp=='$' // Won't replace system functions, since no $ in argValueByName
 		     || (argName!="" && (isdigit(*cp) || *cp=='$'))) {
 		    argName += *cp;
 		    continue;
