@@ -196,5 +196,11 @@ Line_Preproc_Check 144
  
  
  
+ 
 x,y)--bee  submacro has comma paren
-`line 152 "t/t_preproc.v" 2
+
+
+
+ 
+$display("bits %d %d", $bits(foo), `10);
+`line 158 "t/t_preproc.v" 2
