@@ -26,6 +26,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 **** Support for loop i++, ++i, i--, --i, bug175. [by Byron Bradley]
 
+**** Fix `define argument mis-replacing system task of same name, bug191.
+
 **** Fix Verilator core dump on wide integer divides, bug178. [Byron Bradley]
 
 * Verilator 3.720 2009/10/26
